cmd/wego/install/manifests/bootstrap/kpack-components.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kpack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpack-controller
  namespace: kpack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kpack-controller
  template:
    metadata:
      labels:
        app: kpack-controller
        version: 0.2.2-rc.1
    spec:
      serviceAccountName: controller
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: controller
        image: gcr.io/cf-build-service-public/kpack/controller@sha256:ec256da7e29eeecdd0821f499e754080672db8f0bc521b2fa1f13f6a75a04835
        resources:
          requests:
            cpu: 20m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 400Mi
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: defaults.webhook.kpack.io
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: kpack-webhook
      namespace: kpack
  failurePolicy: Fail
  sideEffects: None
  name: defaults.webhook.kpack.io
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.kpack.io
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: kpack-webhook
      namespace: kpack
  failurePolicy: Fail
  sideEffects: None
  name: validation.webhook.kpack.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpack-webhook
  namespace: kpack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kpack-webhook
  template:
    metadata:
      labels:
        app: kpack-webhook
        role: webhook
        version: 0.2.2-rc.1
    spec:
      serviceAccountName: webhook
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: webhook
        image: gcr.io/cf-build-service-public/kpack/webhook@sha256:ab9708d6be3f348fb89dda510525ee15f87716424a8c933f8620f074fd49b73a
        ports:
        - name: https-webhook
          containerPort: 8443
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 200Mi
